progress made on all files and one jpg included

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Webpage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
     </head>
@@ -17,17 +18,19 @@
         </div>
 
         <div class="container">
-  <div class="row">
-    <div class="col">
-      column 1
-    </div>
-    <div class="col">
-      column 2
-    </div>
-    <div class="col-6">
-      column 3
-    </div>
-  </div>
-</div>
+          <hr size="12" noshade>
+          <h3>Bootstrap columns:</h3>
+          <div class="row">
+            <div class="col">
+              <b>Baxter</b>
+            </div>
+            <div class="col">
+              A picture of my dog Baxter taken in North Dunedin Cemetery about 5 years ago.
+            </div>
+            <div class="col-6">
+              <center><img src="bax-cemetery1-bw.jpg" height="300"/></center>
+            </div>
+          </div>
+        </div>
     </body>
 </html>
