--- a/page1.html
+++ b/page1.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>Page One</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
@@ -13,6 +15,15 @@
             <li><a href="page3.html">Page 3</a></li>
             <li><a href="page4.html">Page 4</a></li>
           </ul>
+          <hr size="12" noshade>
+          <h3>An ordered list:</h3>
+          <ol>
+            <li>Item</li>
+            <li>Item</li>
+            <li>Item</li>
+            <li>Item</li>
+            <li>Item</li>
+          </ol>
         </div>
     </body>
 </html>
