--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>Page Two</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
@@ -13,6 +15,23 @@
             <li><a href="page3.html">Page 3</a></li>
             <li><a href="page4.html">Page 4</a></li>
           </ul>
+          <hr size="12" noshade>
+          <h3> A very simple table</h3>
+          </table>
+          <table>
+            <tr>
+              <th>Heading 1</th><th>Heading 2</th>
+            </tr>
+            <tr>
+              <td>datum 1.1</td><td>datum 1.2</th>
+            </tr>
+            <tr>
+              <td>datum 2.1</td><td>datum 2.2</th>
+            </tr>
+            <tr>
+              <td>datum 3.1</td><td>datum 3.2</th>
+            </tr>
+          </table>
         </div>
     </body>
 </html>
