--- a/page4.html
+++ b/page4.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>Page Four</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
@@ -13,6 +15,7 @@
             <li><a href="page3.html">Page 3</a></li>
             <li><a href="index.html">Index</a></li>
           </ul>
+          <hr size="12" noshade>
         </div>
     </body>
 </html>
